--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,9 @@
 
 <app-poney
   (win)="handleWin($event)"
-  *ngFor="let poneyCell of ponies"
+  *ngFor="let poneyCell of ponies; let i = index"
   [poney]="poneyCell"
-  appRainbow
+  appRainbow="silver"
+  [isColored]="!(i % 2)"
   #poneyChildren
 ></app-poney>
