material components module + unit pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<mat-toolbar color="primary" style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
-</div>
+</mat-toolbar>
 
 <app-poney
   (win)="handleWin($event)"
@@ -13,3 +13,7 @@
   [isColored]="!(i % 2)"
   #poneyChildren
 ></app-poney>
+
+<pre>
+  {{ ponies | json }}
+</pre>
