--- a/src/app/components/poney/poney.component.html
+++ b/src/app/components/poney/poney.component.html
@@ -1,4 +1,4 @@
-<div class="container" [class.winner]="winner" [style.left]="poney.distance + '%'">
+<div class="container" [class.winner]="winner" [style.left]="poney.distance | unit">
   <strong (click)="displayName()">{{ poney.name }}</strong>
   <img [src]="poney.image">
 </div>
