--- a/src/app/components/race-list/race-list.component.html
+++ b/src/app/components/race-list/race-list.component.html
@@ -1,5 +1,8 @@
 <mat-nav-list>
-  <mat-list-item *ngFor="let race of races">
+  <mat-list-item
+    *ngFor="let race of races"
+    [routerLink]="['/race', race.id]"
+  >
     {{ race.name }}
   </mat-list-item>
 </mat-nav-list>
