--- a/src/app/components/race-create/race-create.component.html
+++ b/src/app/components/race-create/race-create.component.html
@@ -1,3 +1,17 @@
-<p>
-  race-create works!
-</p>
+<form (submit)="handleSubmit()">
+
+  <mat-form-field>
+    <input type="text" matInput placeholder="Name" name="name">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-select placeholder="Ponies" multiple>
+      <mat-option *ngFor="let poney of ponies$ | async" [value]="poney.id">
+        {{ poney.name }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <button type="submit" mat-button>Submit</button>
+
+</form>
