--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<p>{{ errorMessage$ | async }}</p>
+
 <!--The content below is only a placeholder and can be replaced.-->
 <mat-toolbar color="primary" style="text-align:center">
   <h1>
