--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 <button mat-button routerLink="/race-list">Race List</button>
 <button mat-button routerLink="/race-create">Create Race</button>
 <button mat-button routerLink="/poney-create">Create Poney</button>
+<button mat-button routerLink="/admin/dashboard">Admin</button>
 
 <router-outlet></router-outlet>
 
