--- a/src/app/components/poney-create/poney-create.component.html
+++ b/src/app/components/poney-create/poney-create.component.html
@@ -2,6 +2,9 @@
 
   <mat-form-field>
     <input matInput placeholder="Name" formControlName="name">
+    <mat-error *ngFor="let error of poneyForm.controls.name.errors | keyvalue">
+      {{ errorMessages[error.key] }}
+    </mat-error>
   </mat-form-field>
 
   <mat-form-field>
